# pikia-worker

./: CMakeLists.txt  Makefile  config.ini
cmake/Modules/: FindBoost.cmake  FindLuabind.cmake  FindPQXX.cmake  FindPostgreSQL.cmake
include/: configuration.hpp  connection_bundle.hpp  job_buffer.hpp  job_context.hpp  job_dispatcher.hpp  job_parser.hpp  pikia_exception.hpp  reloadable.hpp  script_manager.hpp  task_executor.hpp  worker.hpp
scripts/: test.lua
scripts/job_handlers/: test.lua
src/: configuration.cpp  connection_bundle.cpp  job_buffer.cpp  job_context.cpp  job_dispatcher.cpp  main.cpp  script_manager.cpp  worker.cpp
